# Copyright 2020 bmc::labs Gmbh. All rights reserved.
#
# Authors:
#   Florian Eich <florian@bmc-labs.com>
#   Jonas Reitemeyer <jonas@bmc-labs.com>

[package]
name = "xdrk"
description = "Library to open XRK and DRK files, produced by AiM devices"

version = "2.0.0-pre1"
authors = [
  "Florian Eich <florian@bmc-labs.com>",
  "Jonas Reitemeyer <jonas@bmc-labs.com"
]

edition = "2018"
build = "build.rs"


[dev-dependencies]
pretty_assertions = "0.6"


[dependencies]
anyhow = "1"
chrono = "0.4"
getset = "0.1"
serde = { version = "1.0", features = ["derive"] }


[profile.test]
rpath = true
